--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,3 +3,14 @@
     padding: 0;
     /* display: block; */
 }
+
+body{
+    
+    height: 100vh;
+    width: 100vw;
+    
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+}
