--- a/public/css/auth.css
+++ b/public/css/auth.css
@@ -1,6 +1,23 @@
-.test {
-    display: flex;
-    flex-direction: column;
+.auth_section {
+  padding: 1.4rem;
+  border-radius: 10px;
+  font-weight: bold;
 
-    gap: 1rem;
+  text-align: center;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+
+.form_title {
+  margin-bottom: 1rem;
+  text-transform: uppercase;
+}
+
+.auth_form {
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+}
+
+input {
+  margin-bottom: 1rem;
 }
