--- a/public/css/homePage.css
+++ b/public/css/homePage.css
@@ -1,28 +1,53 @@
-.task_container{
-    /* TODO: fix with px */
-    width: 300px;
-    display: flex;
-    flex-direction: column;
-    gap: 2rem;
+.task_section {
+  text-align: center;
+  height: 100%;
+  padding: 3rem;
+  border-radius: 10px;
+  box-shadow: rgba(52, 152, 219, 0.5) 0px 3px 8px;
+  /* box-shadow: rgba(3, 102, 214, 0.3) 0px 0px 0px 3px; */
 }
 
-
-.task{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    
-    padding: 0.5rem;
-    
-    border-radius: 10px;
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+.task_container {
+  /* TODO: fix with px */
+  width: 300px;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
 }
 
-.right_content{
-    display: flex;
-    align-items: center;
-    gap: 1rem
+.title {
+  text-transform: uppercase;
+  font-size: 3rem;
+  margin-bottom: 3rem;
 }
 
-.button-add{
+.task {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  padding: 0.5rem;
+
+  border-radius: 5px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+
+.button-add {
+  margin-top: 1.3rem;
+  width: 100%;
+}
+
+.right_content {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
+.hidden {
+  display: none;
+}
+
+.done {
+  text-decoration: line-through;
+  opacity: 0.6;
 }
