--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,16 +1,47 @@
-*{
-    margin: 0;
-    padding: 0;
-    /* display: block; */
+:root {
+  --primary-color: #3498db;
+  --secondary-color: #2ecc71;
+  --accent-color: #e74c3c;
+  --background-color: #ecf0f1;
+  --text-color: #2c3e50;
 }
 
-body{
-    
-    height: 100vh;
-    width: 100vw;
-    
-    display: flex;
-    align-items: center;
-    justify-content: center;
+* {
+  margin: 0;
+  padding: 0;
+  /* display: block; */
+}
 
+body {
+  height: 100vh;
+  width: 100vw;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  font-family: "Poppins";
+
+  background-color: var(--background-color);
+  color: var(--text-color);
+}
+
+button {
+  text-align: center;
+  padding: 0.6rem;
+  border-radius: 5px;
+
+  border: none;
+  background-color: var(--primary-color);
+
+  font-weight: bold;
+  text-transform: uppercase;
+
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+
+  color: white
+}
+
+button:hover {
+  cursor: pointer;
 }
