--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,6 +12,10 @@
   /* display: block; */
 }
 
+html{
+  font-size: 62.5%;
+}
+
 body {
   height: 100vh;
   width: 100vw;
@@ -28,7 +32,7 @@ body {
 
 button {
   text-align: center;
-  padding: 0.6rem;
+  padding: 1.4rem;
   border-radius: 5px;
 
   border: none;
